# Nail-Art

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yaml  justfile  package-lock.json  package.json  start-app.sh  theme.ts
.beads/: config.yaml  issues.jsonl
.beads/.br_history/: issues.20260327_023218_148007000.jsonl  issues.20260327_023218_252026000.jsonl  issues.20260327_023218_359085000.jsonl  issues.20260327_023218_465009000.jsonl  issues.20260327_023218_569427000.jsonl  issues.20260327_023341_545092000.jsonl  issues.20260327_023341_647073000.jsonl  issues.20260327_023341_758934000.jsonl  issues.20260327_023341_874913000.jsonl  issues.20260327_023341_992029000.jsonl  issues.20260327_023342_101996000.jsonl  issues.20260327_023342_210053000.jsonl  issues.20260327_023428_002857000.jsonl  (+209 more)
api/: Dockerfile  pom.xml
client/: .dockerignore  .env.example  .npmrc  Dockerfile  index.html  package-lock.json  package.json  theme.ts  vitest.config.ts
cron/: AppointmentsSameStartEndTime.py  ArchiveAppointments.py  MergeDuplicateClients.py  README.md  pyproject.toml  requirements.txt  test_archive_appointments.py
docs/: INDEX.md  updates.md
migration/: .env.example  README.md  audit_mongo.py  migrate_mongo_to_postgres.py  pyproject.toml  test_migrate.py
scripts/: bootstrap_organization_owner.py  bootstrap_platform_admin.py  create_organization.py  pyproject.toml  send_reminders.py  set_org_twilio.py  test_bootstrap_organization_owner.py  test_create_organization.py  test_send_reminders.py  test_set_org_twilio.py
src/: App.tsx  main.tsx
(+262 files in other folders)
