[project]
name = "migration"
version = "0.1.0"
description = "One-off scripts for the MongoDB -> PostgreSQL migration. Delete this directory after cutover."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=4.2.0",
    "psycopg[binary]>=3.2.0",
    "pymongo>=4.10.0",
    "python-dotenv>=1.0.0",
]
